--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
-      <meta charset="UTF-8">
-      <title>Hello World!</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <title>Hello World!</title>
+    <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
+    <div class="container">
       <h1>Hello World!</h1>
-      We are using node <script>document.write(process.versions.node)</script>,
-      Chrome <script>document.write(process.versions.chrome)</script>,
-      and Electron <script>document.write(process.versions.electron)</script>.
+      <div class="row">
+        <div class="col-xs-4">We are using node <script>document.write(process.versions.node)</script>,</div>
+        <div class="col-xs-4">Chrome <script>document.write(process.versions.chrome)</script>,</div>
+        <div class="col-xs-4">and Electron <script>document.write(process.versions.electron)</script>.</div>
+      </div>
+    </div>
+    <script type="text/javascript" src="bower_components/jquery/jquery.min.js"></script>
+    <script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
   </body>
 </html>
