--- a/index.html
+++ b/index.html
@@ -5,19 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
-    <title>Hello World!</title>
+    <title>Hello World</title>
     <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
-    <div class="container">
-      <h1>Hello World!</h1>
-      <div class="row">
-        <div class="col-xs-4">We are using node <script>document.write(process.versions.node)</script>,</div>
-        <div class="col-xs-4">Chrome <script>document.write(process.versions.chrome)</script>,</div>
-        <div class="col-xs-4">and Electron <script>document.write(process.versions.electron)</script>.</div>
-      </div>
-    </div>
-    <script type="text/javascript" src="bower_components/jquery/jquery.min.js"></script>
-    <script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+
+    <div id="content"></div>
+
+  <script src="public/js/bundle.js"></script>
   </body>
 </html>
