tightening up react

--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
     <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
-
-    <div id="content"></div>
-
-  <script src="public/js/bundle.js"></script>
+    <div id="main"></div>
+    <script src="public/js/constants.js"></script>
+    <script src="public/js/bundle.js"></script>
   </body>
 </html>
